--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,10 @@ storage/*.key
 Homestead.yaml
 Homestead.json
 
+/.idea
+/.vscode
+/.vagrant
+yarn-error.log
+
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
