--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ yarn-error.log
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+
+\.DS_Store
